--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             	 	 	 	 	 	 		 	 	 	 	 		 	 	 	    	  <div class="divOfQ"> 	 	 	 	 	 	 		 	 	 	 	 		 	 	 	    	  
 	 	 	 	 		 	 	<strong class="LikeTheWeb">you like the web?</strong>	
           <br> 
-         <label style="margin: -4px"> yes </label> <input type="radio" style="margin: 10px">	
+         <label style="margin: -4px"> yes </label> <input type="radio" name="LikeWeb" style="margin: 10px">	
             	 	 	 	 	 	 		 	 	 	 	 		 	 	 	    	    <br>	 		 	 	 	 
-         <label style="margin: -3px"> no </label> <input type="radio" style="margin: 9px">	 		 	 
+         <label style="margin: -3px"> no </label> <input type="radio" name="LikeWeb" style="margin: 9px">	 		 	 
             	 	 	 	 	 	 		 	 	 	 	 		 	 	 	    	  </div>  	 
       
         	
